# multithreadedfactorial

./: CMakeLists.txt  README.md
src/: factorial_main.cpp  factorial_thread.cpp
tests/: CMakeLists.txt  CMakeLists_freezed.txt  test_factorial.cpp  test_factorial_0_thread.cpp  test_factorial_2_threads.cpp  test_factorial_4_threads.cpp
